[gd_scene load_steps=12 format=2]

[ext_resource path="res://asset/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Choose_load_format.gd" type="Script" id=2]
[ext_resource path="res://asset/Pop_team.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.519653, 0.561951, 0.773438, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0823529, 0.117647, 0.294118, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.519653, 0.561951, 0.773438, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0823529, 0.117647, 0.294118, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Choose_load_format" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2048.0
margin_bottom = 1206.0
color = Color( 0.156863, 0.196078, 0.392157, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 2048.0
margin_bottom = 1206.0
theme = SubResource( 2 )
custom_constants/separation = 40

[node name="top_spacer" type="Control" parent="VBoxContainer"]
margin_right = 2048.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="CSV_Container" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 2048.0
margin_bottom = 395.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left_spacer3" type="Control" parent="VBoxContainer/CSV_Container"]
margin_right = 50.0
margin_bottom = 335.0
rect_min_size = Vector2( 50, 0 )

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/CSV_Container"]
visible = false
margin_right = 1022.0
margin_bottom = 399.0
size_flags_horizontal = 3
text = "fabricated_team_csv.dat"
align = 1
caret_blink = true

[node name="CSV_Button" type="Button" parent="VBoxContainer/CSV_Container"]
margin_left = 54.0
margin_right = 1994.0
margin_bottom = 335.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Load CSV"

[node name="FileDialog_CSV" type="FileDialog" parent="VBoxContainer/CSV_Container"]
margin_left = 50.0
margin_right = 1250.0
margin_bottom = 350.0
window_title = "Scegli un file in formato CSV"
resizable = true
mode = 0
access = 2

[node name="Right_spacer4" type="Control" parent="VBoxContainer/CSV_Container"]
margin_left = 1998.0
margin_right = 2048.0
margin_bottom = 335.0
rect_min_size = Vector2( 50, 0 )

[node name="JSON_Container2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 435.0
margin_right = 2048.0
margin_bottom = 770.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left_spacer2" type="Control" parent="VBoxContainer/JSON_Container2"]
margin_right = 50.0
margin_bottom = 335.0
rect_min_size = Vector2( 50, 0 )

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/JSON_Container2"]
visible = false
margin_right = 1022.0
margin_bottom = 399.0
size_flags_horizontal = 3
text = "florentia.dat"
align = 1

[node name="JSON_Button" type="Button" parent="VBoxContainer/JSON_Container2"]
margin_left = 54.0
margin_right = 1994.0
margin_bottom = 335.0
size_flags_horizontal = 7
size_flags_vertical = 7
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Load JSON"

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/JSON_Container2"]
margin_left = 50.0
margin_top = -403.0
margin_right = 1250.0
margin_bottom = -53.0
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Apri un file"
resizable = true
dialog_text = "Scegli un file JSON"
dialog_hide_on_ok = true
mode = 0
access = 2

[node name="Rightt_spacer3" type="Control" parent="VBoxContainer/JSON_Container2"]
margin_left = 1998.0
margin_right = 2048.0
margin_bottom = 335.0
rect_min_size = Vector2( 50, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 810.0
margin_right = 2048.0
margin_bottom = 1146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left_spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 336.0
rect_min_size = Vector2( 20, 0 )

[node name="Instructions" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 696.0
margin_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Help" type="Label" parent="VBoxContainer/HBoxContainer/Instructions"]
margin_right = 672.0
margin_bottom = 166.0
size_flags_vertical = 7
text = "Seleziona un file (formato CSV o JSON)"
align = 1
valign = 1

[node name="Notice" type="Label" parent="VBoxContainer/HBoxContainer/Instructions"]
margin_top = 170.0
margin_right = 672.0
margin_bottom = 336.0
size_flags_vertical = 7
align = 1
valign = 1

[node name="goplay_Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 862.0
margin_top = 146.0
margin_right = 1209.0
margin_bottom = 189.0
size_flags_horizontal = 6
size_flags_vertical = 4
custom_constants/hseparation = 5
disabled = true
text = "Vai a fare le squadre!"

[node name="goback_Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1594.0
margin_top = 146.0
margin_right = 1830.0
margin_bottom = 189.0
size_flags_horizontal = 6
size_flags_vertical = 4
custom_constants/hseparation = 5
text = "Torna all'inizio"

[node name="top_spacer2" type="Control" parent="VBoxContainer"]
margin_top = 1186.0
margin_right = 2048.0
margin_bottom = 1206.0
rect_min_size = Vector2( 0, 20 )

[connection signal="button_up" from="VBoxContainer/CSV_Container/CSV_Button" to="." method="_on_CSV_Button_button_up"]
[connection signal="file_selected" from="VBoxContainer/CSV_Container/FileDialog_CSV" to="." method="_on_FileDialog_CSV_file_selected"]
[connection signal="button_up" from="VBoxContainer/JSON_Container2/JSON_Button" to="." method="_on_JSON_Button_button_up"]
[connection signal="file_selected" from="VBoxContainer/JSON_Container2/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/goplay_Button" to="." method="_on_goplay_Button_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/goback_Button" to="." method="_on_goback_Button_button_up"]
